--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta charset="UTF-8">
@@ -9,26 +9,60 @@
 <body>
     <h1>Jasa Curhat Online</h1>
 
-    <p>Butuh didengar?</p>
+    <p>Butuh Teman Curhat?</p>
     <img src="https://temanmucurhat.carrd.co/assets/images/image08.jpg?v=04fb6c01" alt="https://temanmucurhat.carrd.co/assets/images/image08.jpg?v=04fb6c01"width="300">
-    <h2>layanan kami:</h2>
-    <ul>
-        <li>curhat tanpa solusi</li>
-        <li>curhat tanpa solusi</li>
-        <li>curhat tanpa solusi</li>
-    </ul>
-    <h3>apa kata klien kami:</h3>
-    <ul>
-        <li>kami jawab banyakin bersyukur</li>
-        <li>kami jawab banyakin bersyukur</li>
-        <li>kami jawab banyakin bersyukur</li>
-    </ul>
+    <h2>Anda Bercerita :</h2>
+    <nav> 
+        <ul>
+            <li>Kami jawab "Sabar"</li>
+            <li>Kami jawab "Bersyukur"</li>
+            <li>Kami jawab "Yang Sabar Yaa😊😊(Pake emot)"</li>
+        </ul>
+    </nav> 
+    <h3>Price List :</h3>
+    <table border="1" width="100%">
+        <tr>
+            <th>List Menu</th>
+            <th>Balasan</th>
+            <th>Harga</th>
+        </tr>
+        <tr>
+            <td>L1 </td>
+            <td>Chat dibalas "Sabar"</td>
+            <td>Rp 50.000</td>
+        </tr>
+        <tr>
+            <td>L2</td>
+            <td>Chat dibalas "Bersyukur"</td>
+            <td>Rp 100.000</td>
+        </tr>
+        <tr>
+            <td>L3</td>
+            <td>Chat dibalas "Sabar Yaa😊😊(Pake emot)"</td>
+            <td>Rp 150.000</td>
+        </tr>
+    </table>
+    <h4>Kritik dan Saran :</h4>
+    <form>
+        <label>Nama :</label>
+        <input type="text" placeholder="masukan Nama..." required>
+        <br>
+        <label for="">Email :</label>
+        <input type="text" placeholder="masukan Email..." required>
+        <br>
+        <label for="">Pesan :</label> 
+        <br>
+        <textarea name="" id="" cols="30" rows="7" placeholder="Masukan Pesan Anda...." required></textarea>
+        <br>
+        <button type="submit">Kirim</button>
+    </form>
+</body>
 <footer>
-    <p>Temukan kami di:</p>
+    <nav>
+    <p>Temukan Kami di:</p>
     <a href="https://instagram." target="_blank">
-        <i class="fa-brands fa-instagram"></i> Instagram
-    </a>
+    <i class="fa-brands fa-instagram"></i> Instagram</a>
+    </nav>
     <p> Jasa Curhat Online</p>
 </footer>
-</body>
 </html>
