--- a/index.html
+++ b/index.html
@@ -4,65 +4,87 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curhat Online</title>
+    <title>Jasa Curhat Online</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Jasa Curhat Online</h1>
 
-    <p>Butuh Teman Curhat?</p>
-    <img src="https://temanmucurhat.carrd.co/assets/images/image08.jpg?v=04fb6c01" alt="https://temanmucurhat.carrd.co/assets/images/image08.jpg?v=04fb6c01"width="300">
-    <h2>Anda Bercerita :</h2>
-    <nav> 
-        <ul>
-            <li>Kami jawab "Sabar"</li>
-            <li>Kami jawab "Bersyukur"</li>
-            <li>Kami jawab "Yang Sabar Yaa😊😊(Pake emot)"</li>
-        </ul>
-    </nav> 
-    <h3>Price List :</h3>
-    <table border="1" width="100%">
-        <tr>
-            <th>List Menu</th>
-            <th>Balasan</th>
-            <th>Harga</th>
-        </tr>
-        <tr>
-            <td>L1 </td>
-            <td>Chat dibalas "Sabar"</td>
-            <td>Rp 50.000</td>
-        </tr>
-        <tr>
-            <td>L2</td>
-            <td>Chat dibalas "Bersyukur"</td>
-            <td>Rp 100.000</td>
-        </tr>
-        <tr>
-            <td>L3</td>
-            <td>Chat dibalas "Sabar Yaa😊😊(Pake emot)"</td>
-            <td>Rp 150.000</td>
-        </tr>
-    </table>
-    <h4>Kritik dan Saran :</h4>
-    <form>
-        <label>Nama :</label>
-        <input type="text" placeholder="masukan Nama..." required>
-        <br>
-        <label for="">Email :</label>
-        <input type="text" placeholder="masukan Email..." required>
-        <br>
-        <label for="">Pesan :</label> 
-        <br>
-        <textarea name="" id="" cols="30" rows="7" placeholder="Masukan Pesan Anda...." required></textarea>
-        <br>
-        <button type="submit">Kirim</button>
-    </form>
+    <header>
+        <h1>Jasa Curhat Online</h1>
+    </header>
+
+    <main>
+        <section>
+            <p>Butuh Teman Curhat?</p>
+            <img src="https://temanmucurhat.carrd.co/assets/images/image08.jpg?v=04fb6c01" alt="Teman Curhat" width="300">
+            <h2>Anda Bercerita :</h2>
+            <nav> 
+                <ul>
+                    <li>Kami jawab "Sabar"</li>
+                    <li>Kami jawab "Bersyukur"</li>
+                    <li>Kami jawab "Yang Sabar Yaa😊😊(Pake emot)"</li>
+                </ul>
+            </nav> 
+        </section>
+
+        <section>
+            <h3>Price List :</h3>
+            <table>
+                <tr>
+                    <th>List Menu</th>
+                    <th>Balasan</th>
+                    <th>Harga</th>
+                </tr>
+                <tr>
+                    <td>L1</td>
+                    <td>Chat dibalas "Sabar"</td>
+                    <td>Rp 50.000</td>
+                </tr>
+                <tr>
+                    <td>L2</td>
+                    <td>Chat dibalas "Bersyukur"</td>
+                    <td>Rp 100.000</td>
+                </tr>
+                <tr>
+                    <td>L3</td>
+                    <td>Chat dibalas "Sabar Yaa😊😊(Pake emot)"</td>
+                    <td>Rp 150.000</td>
+                </tr>
+            </table>
+        </section>
+        <section>
+            <div class="Iklan">
+                <img src="https://temanmucurhat.carrd.co/assets/images/image08.jpg?v=04fb6c01" alt="Teman Curhat">
+                <h3>Jasa Curhat Online</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur doloremque sit ipsa molestiae soluta repellendus.</p>
+            </div>
+        </section>
+        <section>
+            <h4>Kritik dan Saran :</h4>
+            <form>
+                <label for="nama">Nama :</label>
+                <input type="text" id="nama" placeholder="Masukan Nama..." required>
+                <br>
+                <label for="email">Email :</label>
+                <input type="text" id="email" placeholder="Masukan Email..." required>
+                <br>
+                <label for="pesan">Pesan :</label> 
+                <br>
+                <textarea id="pesan" cols="30" rows="7" placeholder="Masukan Pesan Anda...." required></textarea>
+                <br>
+                <button type="submit">Kirim</button>
+            </form>
+        </section>
+    </main>
 </body>
 <footer>
     <nav>
-    <p>Temukan Kami di:</p>
-    <a href="https://instagram." target="_blank">
-    <i class="fa-brands fa-instagram"></i> Instagram</a>
+        <p>Temukan Kami di:</p>
+        <a href="https://instagram.com" target="_blank">
+            <i class="fab fa-instagram"></i> Instagram
+        </a>
     </nav>
-    <p> Jasa Curhat Online</p>
+    <p>Jasa Curhat Online</p>
 </footer>
 </html>
