--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jasa Curhat Online</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -53,13 +52,25 @@
                 </tr>
             </table>
         </section>
-        <section>
+
+        <section class="iklan-container">
+            <div class="Iklan">
+                <img src="https://temanmucurhat.carrd.co/assets/images/image08.jpg?v=04fb6c01" alt="Teman Curhat">
+                <h3>Jasa Curhat Online</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur doloremque sit ipsa molestiae soluta repellendus.</p>
+            </div>
+            <div class="Iklan">
+                <img src="https://temanmucurhat.carrd.co/assets/images/image08.jpg?v=04fb6c01" alt="Teman Curhat">
+                <h3>Jasa Curhat Online</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur doloremque sit ipsa molestiae soluta repellendus.</p>
+            </div>
             <div class="Iklan">
                 <img src="https://temanmucurhat.carrd.co/assets/images/image08.jpg?v=04fb6c01" alt="Teman Curhat">
                 <h3>Jasa Curhat Online</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur doloremque sit ipsa molestiae soluta repellendus.</p>
             </div>
         </section>
+
         <section>
             <h4>Kritik dan Saran :</h4>
             <form>
