--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jasa Curhat Online</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
 
     <header>
-        <h1>Jasa Curhat Online</h1>
+        <h1 class="logo">Curhat<span>Online</span></h1>
+        <nav class="navbar">
+            <ul class="menu">
+                <li><a href="home">Home</a></li>
+                <li><a href="about">About</a></li>
+                <li><a href="contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
